# ai_chat_bot

./: README.md  pyproject.toml  requirements.txt
.devcontainer/: devcontainer.json
src/ai_chat_bot/: __init__.py  chat_bot.py
