[project]
name = "ai-chat-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "abdullahsheikh01", email = "162831270+abdullahsheikh01@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.45.1",
]

[project.scripts]
ai-chat-bot = "ai_chat_bot:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
